# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "metro_pi"
version = "0.1.0"
edition = "2021"

[dependencies]
ableton-link = { git = "https://github.com/jmyhrman/ableton-link-rs" } # More recent than on crates.io
image = "^0.24.3"
lazy_static = "1.4.0"
rand = "*"
rgb = "^0.8.33"
rodio = "0.15.0"

# Raspberry Pi only:
[target.'cfg(all(target_arch = "arm", target_os="linux", target_env="gnu"))'.dependencies]
rppal = "^0.13.1"
rs_ws281x = { git = "https://github.com/rpi-ws281x/rpi-ws281x-rust" }

[target.'cfg(target_os="macos")'.dependencies]
