# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "metro_pi"
version = "0.1.0"
edition = "2021"

[dependencies]
ableton-link = { git = "https://github.com/jmyhrman/ableton-link-rs" } # More recent than on crates.io
image = "^0.24.3"
lazy_static = "^1.4.0"
rand = "*"
rgb = "^0.8.33"
rodio = "^0.15.0"
spin_sleep = "^1.1.1"

# 64-bit Raspberry Pi only:
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
rppal = "^0.13.1"
rs_ws281x = { git = "https://github.com/rpi-ws281x/rpi-ws281x-rust" }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
crossterm = "^0.25"
coolor = "^0.5"
